Aufgabe 2/Sebastian/Aufgabe 2/output/AST_MiniPParser.java
// $ANTLR 3.4 Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g 2015-11-26 13:49:21

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class AST_MiniPParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANWEISUNG", "BEGIN_TOKEN", "BLOCK_KOMMENTAR", "BOOLEAN", "BOOL_KONSTANTE", "BUCHSTABE", "COMPARE", "COMPARE_OP", "ELSE", "END_TOKEN", "IDENTIFIER", "IF", "INTEGER", "INT_KONSTANTE", "LEERZEICHEN", "NEUE_ZEILE", "PRINT", "PROGRAM", "READ", "REAL", "REAL_KONSTANTE", "START_TOKEN", "STRING", "STRING_KONSTANTE", "VARDEF", "WERTZUWEISUNG", "WHILE", "ZAHL", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "':='", "';'", "'do'", "'else'", "'fi'", "'if'", "'od'", "'println('", "'read('", "'then'", "'while'"
    };

    public static final int EOF=-1;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int ANWEISUNG=4;
    public static final int BEGIN_TOKEN=5;
    public static final int BLOCK_KOMMENTAR=6;
    public static final int BOOLEAN=7;
    public static final int BOOL_KONSTANTE=8;
    public static final int BUCHSTABE=9;
    public static final int COMPARE=10;
    public static final int COMPARE_OP=11;
    public static final int ELSE=12;
    public static final int END_TOKEN=13;
    public static final int IDENTIFIER=14;
    public static final int IF=15;
    public static final int INTEGER=16;
    public static final int INT_KONSTANTE=17;
    public static final int LEERZEICHEN=18;
    public static final int NEUE_ZEILE=19;
    public static final int PRINT=20;
    public static final int PROGRAM=21;
    public static final int READ=22;
    public static final int REAL=23;
    public static final int REAL_KONSTANTE=24;
    public static final int START_TOKEN=25;
    public static final int STRING=26;
    public static final int STRING_KONSTANTE=27;
    public static final int VARDEF=28;
    public static final int WERTZUWEISUNG=29;
    public static final int WHILE=30;
    public static final int ZAHL=31;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "konstanten", "fi", "anweisung", "println", "deklaration", 
    "wertzuweisung_optionen", "elihw", "arith_ausdruck", "s", "start", "atom", 
    "wertzuweisung", "read", "vergleich", "mult", "drucken"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public AST_MiniPParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public AST_MiniPParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this,port,adaptor);
        setDebugListener(proxy);
        setTokenStream(new DebugTokenStream(input,proxy));
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);
        proxy.setTreeAdaptor(adap);
    }

public AST_MiniPParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg);
     
    TreeAdaptor adap = new CommonTreeAdaptor();
    setTreeAdaptor(adap);


}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

protected DebugTreeAdaptor adaptor;
public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = new DebugTreeAdaptor(dbg,adaptor);


}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}

    public String[] getTokenNames() { return AST_MiniPParser.tokenNames; }
    public String getGrammarFileName() { return "Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g"; }


    public static class start_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:13:1: start : START_TOKEN ( deklaration )* BEGIN_TOKEN ( anweisung )+ END_TOKEN -> ^( PROGRAM ^( VARDEF ( deklaration )* ) ^( ANWEISUNG ( anweisung )+ ) ) ;
    public final AST_MiniPParser.start_return start() throws RecognitionException {
        AST_MiniPParser.start_return retval = new AST_MiniPParser.start_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token START_TOKEN1=null;
        Token BEGIN_TOKEN3=null;
        Token END_TOKEN5=null;
        AST_MiniPParser.deklaration_return deklaration2 =null;

        AST_MiniPParser.anweisung_return anweisung4 =null;


        CommonTree START_TOKEN1_tree=null;
        CommonTree BEGIN_TOKEN3_tree=null;
        CommonTree END_TOKEN5_tree=null;
        RewriteRuleTokenStream stream_START_TOKEN=new RewriteRuleTokenStream(adaptor,"token START_TOKEN");
        RewriteRuleTokenStream stream_END_TOKEN=new RewriteRuleTokenStream(adaptor,"token END_TOKEN");
        RewriteRuleTokenStream stream_BEGIN_TOKEN=new RewriteRuleTokenStream(adaptor,"token BEGIN_TOKEN");
        RewriteRuleSubtreeStream stream_anweisung=new RewriteRuleSubtreeStream(adaptor,"rule anweisung");
        RewriteRuleSubtreeStream stream_deklaration=new RewriteRuleSubtreeStream(adaptor,"rule deklaration");
        try { dbg.enterRule(getGrammarFileName(), "start");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(13, 0);

        try {
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:2: ( START_TOKEN ( deklaration )* BEGIN_TOKEN ( anweisung )+ END_TOKEN -> ^( PROGRAM ^( VARDEF ( deklaration )* ) ^( ANWEISUNG ( anweisung )+ ) ) )
            dbg.enterAlt(1);

            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:4: START_TOKEN ( deklaration )* BEGIN_TOKEN ( anweisung )+ END_TOKEN
            {
            dbg.location(14,4);
            START_TOKEN1=(Token)match(input,START_TOKEN,FOLLOW_START_TOKEN_in_start61);  
            stream_START_TOKEN.add(START_TOKEN1);

            dbg.location(14,16);
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:16: ( deklaration )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==BOOL_KONSTANTE||LA1_0==INT_KONSTANTE||LA1_0==REAL_KONSTANTE||LA1_0==STRING_KONSTANTE) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:16: deklaration
            	    {
            	    dbg.location(14,16);
            	    pushFollow(FOLLOW_deklaration_in_start63);
            	    deklaration2=deklaration();

            	    state._fsp--;

            	    stream_deklaration.add(deklaration2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(14,29);
            BEGIN_TOKEN3=(Token)match(input,BEGIN_TOKEN,FOLLOW_BEGIN_TOKEN_in_start66);  
            stream_BEGIN_TOKEN.add(BEGIN_TOKEN3);

            dbg.location(14,41);
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:41: ( anweisung )+
            int cnt2=0;
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==IDENTIFIER||LA2_0==INTEGER||LA2_0==REAL||LA2_0==32||LA2_0==35||LA2_0==37||LA2_0==44||(LA2_0 >= 46 && LA2_0 <= 47)||LA2_0==49) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:41: anweisung
            	    {
            	    dbg.location(14,41);
            	    pushFollow(FOLLOW_anweisung_in_start68);
            	    anweisung4=anweisung();

            	    state._fsp--;

            	    stream_anweisung.add(anweisung4.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt2++;
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(14,52);
            END_TOKEN5=(Token)match(input,END_TOKEN,FOLLOW_END_TOKEN_in_start71);  
            stream_END_TOKEN.add(END_TOKEN5);


            // AST REWRITE
            // elements: anweisung, deklaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 14:62: -> ^( PROGRAM ^( VARDEF ( deklaration )* ) ^( ANWEISUNG ( anweisung )+ ) )
            {
                dbg.location(14,65);
                // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:65: ^( PROGRAM ^( VARDEF ( deklaration )* ) ^( ANWEISUNG ( anweisung )+ ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(14,67);
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                dbg.location(14,75);
                // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:75: ^( VARDEF ( deklaration )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                dbg.location(14,77);
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(VARDEF, "VARDEF")
                , root_2);

                dbg.location(14,84);
                // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:84: ( deklaration )*
                while ( stream_deklaration.hasNext() ) {
                    dbg.location(14,84);
                    adaptor.addChild(root_2, stream_deklaration.nextTree());

                }
                stream_deklaration.reset();

                adaptor.addChild(root_1, root_2);
                }
                dbg.location(14,98);
                // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:14:98: ^( ANWEISUNG ( anweisung )+ )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                dbg.location(14,100);
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(ANWEISUNG, "ANWEISUNG")
                , root_2);

                dbg.location(14,110);
                if ( !(stream_anweisung.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_anweisung.hasNext() ) {
                    dbg.location(14,110);
                    adaptor.addChild(root_2, stream_anweisung.nextTree());

                }
                stream_anweisung.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(14, 121);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "start");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "start"


    public static class deklaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "deklaration"
    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:16:1: deklaration : konstanten IDENTIFIER ( ',' IDENTIFIER )* ';' -> ( ^( konstanten IDENTIFIER ) )+ ;
    public final AST_MiniPParser.deklaration_return deklaration() throws RecognitionException {
        AST_MiniPParser.deklaration_return retval = new AST_MiniPParser.deklaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token IDENTIFIER7=null;
        Token char_literal8=null;
        Token IDENTIFIER9=null;
        Token char_literal10=null;
        AST_MiniPParser.konstanten_return konstanten6 =null;


        CommonTree IDENTIFIER7_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree IDENTIFIER9_tree=null;
        CommonTree char_literal10_tree=null;
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleSubtreeStream stream_konstanten=new RewriteRuleSubtreeStream(adaptor,"rule konstanten");
        try { dbg.enterRule(getGrammarFileName(), "deklaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(16, 0);

        try {
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:17:2: ( konstanten IDENTIFIER ( ',' IDENTIFIER )* ';' -> ( ^( konstanten IDENTIFIER ) )+ )
            dbg.enterAlt(1);

            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:17:4: konstanten IDENTIFIER ( ',' IDENTIFIER )* ';'
            {
            dbg.location(17,4);
            pushFollow(FOLLOW_konstanten_in_deklaration101);
            konstanten6=konstanten();

            state._fsp--;

            stream_konstanten.add(konstanten6.getTree());
            dbg.location(17,15);
            IDENTIFIER7=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_deklaration103);  
            stream_IDENTIFIER.add(IDENTIFIER7);

            dbg.location(17,26);
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:17:26: ( ',' IDENTIFIER )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==36) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:17:27: ',' IDENTIFIER
            	    {
            	    dbg.location(17,27);
            	    char_literal8=(Token)match(input,36,FOLLOW_36_in_deklaration106);  
            	    stream_36.add(char_literal8);

            	    dbg.location(17,31);
            	    IDENTIFIER9=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_deklaration108);  
            	    stream_IDENTIFIER.add(IDENTIFIER9);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}

            dbg.location(17,44);
            char_literal10=(Token)match(input,40,FOLLOW_40_in_deklaration112);  
            stream_40.add(char_literal10);


            // AST REWRITE
            // elements: IDENTIFIER, konstanten
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 17:48: -> ( ^( konstanten IDENTIFIER ) )+
            {
                dbg.location(17,51);
                if ( !(stream_IDENTIFIER.hasNext()||stream_konstanten.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_IDENTIFIER.hasNext()||stream_konstanten.hasNext() ) {
                    dbg.location(17,51);
                    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:17:51: ^( konstanten IDENTIFIER )
                    {
                    CommonTree root_1 = (CommonTree)adaptor.nil();
                    dbg.location(17,53);
                    root_1 = (CommonTree)adaptor.becomeRoot(stream_konstanten.nextNode(), root_1);

                    dbg.location(17,64);
                    adaptor.addChild(root_1, 
                    stream_IDENTIFIER.nextNode()
                    );

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_IDENTIFIER.reset();
                stream_konstanten.reset();

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(17, 75);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "deklaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "deklaration"


    public static class konstanten_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "konstanten"
    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:19:1: konstanten : ( INT_KONSTANTE | REAL_KONSTANTE | STRING_KONSTANTE | BOOL_KONSTANTE ) ;
    public final AST_MiniPParser.konstanten_return konstanten() throws RecognitionException {
        AST_MiniPParser.konstanten_return retval = new AST_MiniPParser.konstanten_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set11=null;

        CommonTree set11_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "konstanten");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(19, 0);

        try {
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:20:2: ( ( INT_KONSTANTE | REAL_KONSTANTE | STRING_KONSTANTE | BOOL_KONSTANTE ) )
            dbg.enterAlt(1);

            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(20,2);
            set11=(Token)input.LT(1);

            if ( input.LA(1)==BOOL_KONSTANTE||input.LA(1)==INT_KONSTANTE||input.LA(1)==REAL_KONSTANTE||input.LA(1)==STRING_KONSTANTE ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set11)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(20, 72);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "konstanten");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "konstanten"


    public static class anweisung_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "anweisung"
    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:22:1: anweisung : ( wertzuweisung | arith_ausdruck s | read | println | fi | elihw ) ';' !;
    public final AST_MiniPParser.anweisung_return anweisung() throws RecognitionException {
        AST_MiniPParser.anweisung_return retval = new AST_MiniPParser.anweisung_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal19=null;
        AST_MiniPParser.wertzuweisung_return wertzuweisung12 =null;

        AST_MiniPParser.arith_ausdruck_return arith_ausdruck13 =null;

        AST_MiniPParser.s_return s14 =null;

        AST_MiniPParser.read_return read15 =null;

        AST_MiniPParser.println_return println16 =null;

        AST_MiniPParser.fi_return fi17 =null;

        AST_MiniPParser.elihw_return elihw18 =null;


        CommonTree char_literal19_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "anweisung");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(22, 0);

        try {
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:23:2: ( ( wertzuweisung | arith_ausdruck s | read | println | fi | elihw ) ';' !)
            dbg.enterAlt(1);

            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:23:4: ( wertzuweisung | arith_ausdruck s | read | println | fi | elihw ) ';' !
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(23,4);
            // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:23:4: ( wertzuweisung | arith_ausdruck s | read | println | fi | elihw )
            int alt4=6;
            try { dbg.enterSubRule(4);
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==39) ) {
                    alt4=1;
                }
                else if ( (LA4_1==COMPARE_OP||(LA4_1 >= 34 && LA4_1 <= 35)||(LA4_1 >= 37 && LA4_1 <= 38)||LA4_1==40) ) {
                    alt4=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
                }
                break;
            case INTEGER:
            case REAL:
            case 32:
            case 35:
            case 37:
                {
                alt4=2;
                }
                break;
            case 47:
                {
                alt4=3;
                }
                break;
            case 46:
                {
                alt4=4;
                }
                break;
            case 44:
                {
                alt4=5;
                }
                break;
            case 49:
                {
                alt4=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:23:5: wertzuweisung
                    {
                    dbg.location(23,5);
                    pushFollow(FOLLOW_wertzuweisung_in_anweisung156);
                    wertzuweisung12=wertzuweisung();

                    state._fsp--;

                    adaptor.addChild(root_0, wertzuweisung12.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:23:21: arith_ausdruck s
                    {
                    dbg.location(23,21);
                    pushFollow(FOLLOW_arith_ausdruck_in_anweisung160);
                    arith_ausdruck13=arith_ausdruck();

                    state._fsp--;

                    adaptor.addChild(root_0, arith_ausdruck13.getTree());
                    dbg.location(23,36);
                    pushFollow(FOLLOW_s_in_anweisung162);
                    s14=s();

                    state._fsp--;

                    adaptor.addChild(root_0, s14.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:23:40: read
                    {
                    dbg.location(23,40);
                    pushFollow(FOLLOW_read_in_anweisung166);
                    read15=read();

                    state._fsp--;

                    adaptor.addChild(root_0, read15.getTree());

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // Z:\\pub\\Semester 4\\CIP-Git\\CIP\\Aufgabe 2\\Sebastian\\Aufgabe 2\\AST_MiniP.g:23:47: println
                    {
                    dbg.location(23,47);
                    pushFollow(FOLLOW_println_in_anweisung170);
                    println16=println();

                    state._fsp--;

                    adaptor.addChild(root_0, println16.getTree());

                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);
